--- a/src/Management/Properties/launchSettings.json
+++ b/src/Management/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:44815",
-      "sslPort": 44367
+      "applicationUrl": "http://localhost:11389",
+      "sslPort": 44315
     }
   },
   "profiles": {
-    "decision_dice.Management": {
+    "Management": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7203;http://localhost:5203",
+      "applicationUrl": "https://localhost:7048;http://localhost:5048",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
