--- a/src/MotivatorManagementFunction/Properties/launchSettings.json
+++ b/src/MotivatorManagementFunction/Properties/launchSettings.json
@@ -3,17 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:11389",
-      "sslPort": 44315
+      "applicationUrl": "http://localhost:51984",
+      "sslPort": 44378
     }
   },
   "profiles": {
-    "Management": {
+    "MotivatorManagementFunction": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7048;http://localhost:5048",
+      "applicationUrl": "https://localhost:7236;http://localhost:5236",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -21,7 +20,6 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
