--- a/src/MotivatorManagementFunction/MotivatorManagementFunction.csproj
+++ b/src/MotivatorManagementFunction/MotivatorManagementFunction.csproj
@@ -10,7 +10,9 @@
 		<PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.6.0" />
 		<PackageReference Include="Amazon.Lambda.Core" Version="2.1.0" />
 		<PackageReference Include="Amazon.Lambda.RuntimeSupport" Version="1.8.8" />
+		<PackageReference Include="Amazon.Lambda.S3Events" Version="3.0.1" />
 		<PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.3.1" />
+		<PackageReference Include="AWSSDK.S3" Version="3.7.201.16" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
