--- a/template.yaml
+++ b/template.yaml
@@ -70,3 +70,12 @@ Resources:
             HeaderBehavior: none
           QueryStringsConfig:
             QueryStringBehavior: none
+
+  MotivationManagementFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: MotivatorManagementFunction
+      Runtime: dotnet6
+      CodeUri: publish/MotivatorManagementFunction
+      MemorySize: 256
+      Timeout: 30
