Removed function from template

--- a/template.yaml
+++ b/template.yaml
@@ -71,11 +71,11 @@ Resources:
           QueryStringsConfig:
             QueryStringBehavior: none
 
-  MotivationManagementFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      Handler: MotivatorManagementFunction
-      Runtime: dotnet6
-      CodeUri: publish/MotivatorManagementFunction
-      MemorySize: 256
-      Timeout: 30
+  #MotivationManagementFunction:
+  #  Type: AWS::Serverless::Function
+  #  Properties:
+  #    Handler: MotivatorManagementFunction
+  #    Runtime: dotnet6
+  #    CodeUri: publish/MotivatorManagementFunction
+  #    MemorySize: 256
+  #    Timeout: 30
