--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,12 +29,12 @@ jobs:
         aws cloudformation package --template-file template.yaml \
             --s3-bucket code-for-lambda-functions \
             --output-template-file templatePackaged.yaml \
-            --s3-prefix {{ github.ref_name }}-{{ github.run_number }}
+            --s3-prefix ${{ github.ref_name }}-${{ github.run_number }}
 
         aws cloudformation create-change-set \
-            --template-url https://s3-eu-west-2.amazonaws.com/code-for-lambda-functions/{{ github.ref_name }}-{{ github.run_number }}/templatePackaged.yaml
-            --stack-name decision-dice
-            --changeset-name {{ github.ref_name }}-{{ github.run_number }}
+            --template-url https://s3-eu-west-2.amazonaws.com/code-for-lambda-functions/${{ github.ref_name }}-${{ github.run_number }}/templatePackaged.yaml \
+            --stack-name decision-dice \
+            --change-set-name ${{ github.ref_name }}-${{ github.run_number }}
 
 
 
