--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,13 @@ jobs:
       run: |
         aws cloudformation package --template-file template.yaml \
             --s3-bucket joshuarichardson-deployment \
-            --output-template-file templatePackaged.yaml \
+            --output-template-file template-packaged.yaml \
             --s3-prefix ${{ github.ref_name }}-${{ github.run_number }}
 
+        aws s3 cp template-packaged.yaml s3://joshuarichardson-deployment/${{ github.ref_name }}-${{ github.run_number }}/
+
         aws cloudformation create-change-set \
-            --template-url https://s3-eu-west-2.amazonaws.com/joshuarichardson-deployment/${{ github.ref_name }}-${{ github.run_number }}/templatePackaged.yaml \
+            --template-url https://s3-eu-west-2.amazonaws.com/joshuarichardson-deployment/${{ github.ref_name }}-${{ github.run_number }}/template-packaged.yaml \
             --stack-name decision-dice \
             --change-set-name ${{ github.ref_name }}-${{ github.run_number }}
 
