Added alias to distro

--- a/template.yaml
+++ b/template.yaml
@@ -17,16 +17,12 @@ Resources:
       PolicyDocument:
         Version: 2012-10-17
         Statement:
-          Sid: AllowCloudFrontServicePrincipalReadOnly
-          Effect: Allow
-          Principal:
-            Service: cloudfront.amazonaws.com
           Action: 
             - s3:GetObject
-          Resource: "arn:aws:s3:::decision-dice-motivators/*"
+          Resource: "arn::aws::s3:::decision-dice-motivators/*"
           Condition:
             StringEquals:
-              AWS:SourceArn: !Sub "arn:aws:cloudfront::${AWS::AccountId}:distribution/${MotivationDistribution}"
+                AWS:SourceArn: !Sub "arn:aws:cloudfront::266804135388:distribution/${!Ref MotivationDistribution}"
 
   MotivationOriginAccessControl:
     Type: AWS::CloudFront::OriginAccessControl  
@@ -41,6 +37,8 @@ Resources:
     Type: AWS::CloudFront::Distribution  
     Properties:
       DistributionConfig:
+        Aliases:
+            - decisions.joshuarichardson.dev
         DefaultCacheBehavior:
           TargetOriginId: Motivators
           ViewerProtocolPolicy: redirect-to-https
@@ -52,7 +50,10 @@ Resources:
             DomainName: decision-dice-motivators.s3.eu-west-2.amazonaws.com
             S3OriginConfig:
               OriginAccessIdentity: ""
-            OriginAccessControlId: !Ref MotivationOriginAccessControl
+        ViewerCertificate:
+          IamCertificateId: 126b7b2b-ea99-40af-98a2-03ab69944526
+          MinimumProtocolVersion: TLSv1.2_2018
+          SslSupportMethod: sni-only
 
   MotivationCachePolicy:
     Type: AWS::CloudFront::CachePolicy  
@@ -70,12 +71,3 @@ Resources:
             HeaderBehavior: none
           QueryStringsConfig:
             QueryStringBehavior: none
-
-  #MotivationManagementFunction:
-  #  Type: AWS::Serverless::Function
-  #  Properties:
-  #    Handler: MotivatorManagementFunction
-  #    Runtime: dotnet6
-  #    CodeUri: publish/MotivatorManagementFunction
-  #    MemorySize: 256
-  #    Timeout: 30
