--- a/template.yaml
+++ b/template.yaml
@@ -17,8 +17,12 @@ Resources:
       PolicyDocument:
         Version: 2012-10-17
         Statement:
+          Sid: AllowCloudFrontServicePrincipalReadOnly
+          Principal:
+            Service: cloudfront.amazonaws.com
           Action: 
             - s3:GetObject
+          Effect: Allow
           Resource: "arn::aws::s3:::decision-dice-motivators/*"
           Condition:
             StringEquals:
