--- a/template.yaml
+++ b/template.yaml
@@ -41,6 +41,8 @@ Resources:
     Type: AWS::CloudFront::Distribution  
     Properties:
       DistributionConfig:
+        Aliases:
+          - decisions.joshuarichardson.dev
         DefaultCacheBehavior:
           TargetOriginId: Motivators
           ViewerProtocolPolicy: allow-all
