--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Build
       run: |
         dotnet build --configuration Release --no-restore
-        dotnet publish -c Release -o ../publish/MotivatorManagementFunction /p:GenerateRuntimeConfigurationFiles=true
+        dotnet publish -c Release -o ./publish/MotivatorManagementFunction /p:GenerateRuntimeConfigurationFiles=true
     - name: Package
       run: |
         aws cloudformation package --template-file template.yaml \
