--- a/template.yaml
+++ b/template.yaml
@@ -99,13 +99,18 @@ Resources:
               Service: lambda.amazonaws.com
             Action:
               - "sts:AssumeRole"
-          - Effect: Allow
-            Principal: "*"
-            Action: "lambda:InvokeFunctionUrl"
-            Resource: "arn:aws:lambda:eu-west-2:266804135388:function:*"
-            Condition:
-              StringEquals:
-                "lambda:FunctionUrlAuthType": "NONE"
+      Policies:
+        - PolicyName: UrlLambdaInvocation
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Principal: "*"
+                Action: "lambda:InvokeFunctionUrl"
+                Resource: !Sub "arn:aws:lambda:eu-west-2:${AWS::AccountId}:function:*"
+                Condition:
+                  StringEquals:
+                    "lambda:FunctionUrlAuthType": "NONE"
 
   MotivationManagementUrl:
     Type: AWS::Lambda::Url
