--- a/template.yaml
+++ b/template.yaml
@@ -105,12 +105,11 @@ Resources:
             Version: 2012-10-17
             Statement:
               - Effect: Allow
-                Principal: "*"
-                Action: "lambda:InvokeFunctionUrl"
+                Action: lambda:InvokeFunctionUrl
                 Resource: !Sub "arn:aws:lambda:eu-west-2:${AWS::AccountId}:function:*"
                 Condition:
                   StringEquals:
-                    "lambda:FunctionUrlAuthType": "NONE"
+                    lambda:FunctionUrlAuthType: NONE
 
   MotivationManagementUrl:
     Type: AWS::Lambda::Url
