--- a/src/MotivatorManagementFunction/MotivatorManagementFunction.csproj
+++ b/src/MotivatorManagementFunction/MotivatorManagementFunction.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,7 +12,8 @@
 		<PackageReference Include="Amazon.Lambda.RuntimeSupport" Version="1.8.8" />
 		<PackageReference Include="Amazon.Lambda.S3Events" Version="3.0.1" />
 		<PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.3.1" />
-		<PackageReference Include="AWSSDK.S3" Version="3.7.201.16" />
+		<PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.7" />
+		<PackageReference Include="AWSSDK.S3" Version="3.7.202.3" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
