--- a/template.yaml
+++ b/template.yaml
@@ -111,6 +111,19 @@ Resources:
                   - "logs:PutLogEvents"
                   - "logs:CreateLogGroup"
                 Resource: "*"
+        - PolicyName: S3Access
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Sid: S3Access
+                Effect: Allow
+                Action:
+                  - "s3:PutObject"
+                  - "s3:GetObject"
+                  - "s3:DeleteObject"
+                  - "s3:ListBucket"
+                Resource: "arn:aws:s3:::decision-dice-motivators/*"
+            
 
   UrlLambdaInvocationPermission:
     Type: AWS::Lambda::Permission
