--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.CloudFront" Version="3.7.201.20" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.202.3" />
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
