--- a/.insomnia/ApiSpec/spc_debb93bc7197432fa9b5f8c59cd79c55.yml
+++ b/.insomnia/ApiSpec/spc_debb93bc7197432fa9b5f8c59cd79c55.yml
@@ -1,9 +1,9 @@
 _id: spc_debb93bc7197432fa9b5f8c59cd79c55
 type: ApiSpec
 parentId: wrk_a4c260a0052948398fe72791deb90eff
-modified: 1693205444970
+modified: 1693206399957
 created: 1693204853009
-fileName: New Document
+fileName: decision-dice-api.git
 contents: |-
   {
     "openapi": "3.0.1",
