--- a/template.yaml
+++ b/template.yaml
@@ -32,10 +32,13 @@ Resources:
             Service: cloudfront.amazonaws.com
           Action:
             - s3:GetObject
-          Resource: "arn:aws:s3:::decision-dice-motivators/*"
+          Resource:
+            - "arn:aws:s3:::decision-dice-motivators/*"
           Condition:
             StringEquals:
-              AWS:SourceArn: !Sub "arn:aws:cloudfront::${AWS::AccountId}:distribution/${MotivationDistribution}"
+              AWS:SourceArn: 
+                - !Sub "arn:aws:cloudfront::${AWS::AccountId}:distribution/${MotivationDistribution}"
+                - !Sub "arn:aws:cloudfront::${AWS::AccountId}:distribution/${DecisionApiDistribution}"
 
   MotivationOriginAccessControl:
     Type: AWS::CloudFront::OriginAccessControl  
